[package]
name = "nscldaq_ringbuffer"
version = "0.6.0"
#authors = "Ron Fox"
edition = "2018"
license = "LGPL-3.0"
description="Low level NSCLDAQ ring buffer access"
homepage="http://docs.frib.msu.edu/daq"
repository="https://gitlab.msu.edu/foxr/rust-ringbuffer.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.6.2"