[package]
name = "nscldaq_ringbuffer"
version = "0.7.1"
#authors = "Ron Fox"
edition = "2018"
license = "LGPL-3.0"
description="Low level NSCLDAQ ring buffer access"
homepage="http://docs.frib.msu.edu/daq"
repository="https://github.com/FRIBDAQ/rust-ringbuffer.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.6.2"